--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -1118,19 +1118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Traceback (most recent call last):',\n",
-       " '  File \"/usr/local/bin/jupyter-nbconvert\", line 5, in <module>',\n",
-       " '    from nbconvert.nbconvertapp import main',\n",
-       " 'ImportError: No module named nbconvert.nbconvertapp']"
+       "['[NbConvertApp] Converting notebook HMM Tagger.ipynb to html',\n",
+       " '/usr/local/lib/python2.7/dist-packages/nbconvert/filters/highlight.py:138: UserWarning: IPython3 lexer unavailable, falling back on Python 3',\n",
+       " '  warn(\"IPython3 lexer unavailable, falling back on Python 3\")',\n",
+       " '[NbConvertApp] Writing 380372 bytes to HMM Tagger.html',\n",
+       " '[NbConvertApp] Converting notebook HMM warmup (optional).ipynb to html',\n",
+       " '[NbConvertApp] Writing 332549 bytes to HMM warmup (optional).html']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
